[gd_scene load_steps=20 format=2]

[ext_resource path="res://art/samuel-inkilainen-laboratory.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/BotonMaterial.gd" type="Script" id=2]
[ext_resource path="res://art/go-back-arrow-svgrepo-com.png" type="Texture" id=3]
[ext_resource path="res://fonts/new_dynamicfont_30.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/Atras.gd" type="Script" id=5]
[ext_resource path="res://scripts/Actividad2.gd" type="Script" id=6]
[ext_resource path="res://fonts/ARIAL.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://art/wrong.png" type="Texture" id=8]
[ext_resource path="res://art/good.png" type="Texture" id=9]
[ext_resource path="res://scripts/BotonMezclar.gd" type="Script" id=11]
[ext_resource path="res://buttons/BotonesMezcla.tscn" type="PackedScene" id=13]
[ext_resource path="res://buttons/BotonesComprobar.tscn" type="PackedScene" id=14]
[ext_resource path="res://buttons/BotonesReiniciar.tscn" type="PackedScene" id=15]
[ext_resource path="res://buttons/BotonMaterial.tscn" type="PackedScene" id=16]
[ext_resource path="res://art/pulsado.png" type="Texture" id=17]
[ext_resource path="res://art/Black_from_a_camera.jpg" type="Texture" id=18]

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 7 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/CONSOLAB.TTF"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 5 )

[node name="Actividad1" type="Node2D"]
script = ExtResource( 6 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 529.875, 300.1 )
scale = Vector2( 0.276107, 0.277685 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Atras" type="TextureButton" parent="."]
margin_left = 32.0
margin_top = 496.0
margin_right = 1056.0
margin_bottom = 1520.0
rect_scale = Vector2( 0.105, 0.105 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 17 )
script = ExtResource( 5 )
reference_path = "res://scenes/MenuPrincipal.tscn"

[node name="Titulo" type="Label" parent="Atras"]
margin_left = 152.381
margin_top = 400.0
margin_right = 296.381
margin_bottom = 450.0
rect_scale = Vector2( 4.5, 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "atras"
align = 1
valign = 1
uppercase = true

[node name="FondoMandato" type="Sprite" parent="."]
position = Vector2( 521.5, 179.125 )
scale = Vector2( 0.6525, 0.135278 )
texture = ExtResource( 18 )

[node name="Mandato" type="RichTextLabel" parent="."]
margin_left = 136.0
margin_top = 128.0
margin_right = 904.0
margin_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "En esta actividad se quiere determinar el nivel de acidez de una muestra de aceite. Preparar la mezcla disolvente en campana extractora. Medir con probeta 25 mL de alcohol etílico. Medir en la misma probeta 25 mL de éter etílico. Verter la mezcla disolvente en matraz erlenmeyer de 250 mL. Tapar y agitar el matraz con la mezcla. Medir 11 mL de aceite problema con pipeta aforada. Verter el aceite en un matraz erlenmeyer dejando escurrir la pipeta entre 5 y 6 minutos. Añadir a la mezcla disolvente unas gotas de fenolftaleína y agitar el matraz. Neutralizar la acidez de la mezcla disolvente añadiendo gota a gota desde la bureta KOH 0,1N. Hasta la aparición de color rosa débil persistente. Verter la mezcla disolvente neutralizada sobre el matraz con el aceite y agitar hasta disolución. Valorar desde la bureta previamente enrasada con KOH 0,1N hasta coloración rosa persistente. Anotar los mL de KOH 0,1N gastados en la valoración."
deselect_on_focus_loss_enabled = false

[node name="Ayuda" type="Button" parent="."]
margin_left = 928.0
margin_top = 512.0
margin_right = 1020.0
margin_bottom = 576.0

[node name="Titulo" type="Label" parent="Ayuda"]
modulate = Color( 0.956863, 0.956863, 0.956863, 1 )
margin_left = 13.0
margin_top = 10.0
margin_right = 78.0
margin_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "AYUDA"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_lock_": true
}

[node name="Good" type="Sprite" parent="."]
visible = false
position = Vector2( 795, 378 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 9 )

[node name="GoodJob" type="Label" parent="Good"]
margin_left = -141.25
margin_top = -46.0417
margin_right = 143.75
margin_bottom = 3.95831
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Bien Hecho!"
align = 1
valign = 1
uppercase = true

[node name="Wrong" type="Sprite" parent="."]
visible = false
position = Vector2( 223, 373 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="TryAgain" type="Label" parent="Wrong"]
margin_left = -152.0
margin_top = -72.0
margin_right = 157.0
margin_bottom = 31.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Intentalo de
Nuevo..."
align = 1
valign = 1
uppercase = true

[node name="Actividad" type="Label" parent="."]
margin_left = 69.0
margin_top = 50.0
margin_right = 969.0
margin_bottom = 100.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "acidez del aceite"
align = 1
valign = 1
uppercase = true

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 391.0
margin_top = 150.0
margin_right = 641.0
margin_bottom = 591.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="BotonMaterial" parent="Menu" instance=ExtResource( 16 )]
margin_top = 115.0
margin_right = 250.0
margin_bottom = 165.0
rect_min_size = Vector2( 10, 50 )
script = ExtResource( 2 )
reference_path = "res://scenes/EscenaMaterial2.tscn"
start_focused = true

[node name="BotonMezclar" parent="Menu" instance=ExtResource( 13 )]
visible = false
margin_top = 155.0
margin_right = 250.0
margin_bottom = 205.0
rect_min_size = Vector2( 10, 50 )
script = ExtResource( 11 )
reference_path = "res://scenes/EscenaMezclar2.tscn"

[node name="BotonReiniciar" parent="Menu" instance=ExtResource( 15 )]
margin_top = 195.0
margin_right = 250.0
margin_bottom = 245.0
rect_min_size = Vector2( 10, 50 )
flat = false

[node name="BotonComprobar" parent="Menu" instance=ExtResource( 14 )]
margin_top = 275.0
margin_right = 250.0
margin_bottom = 325.0
rect_min_size = Vector2( 10, 50 )
flat = false

[node name="Fondo_ayuda" type="Sprite" parent="."]
visible = false
position = Vector2( 872, 400 )
scale = Vector2( 0.273333, 0.167222 )
texture = ExtResource( 18 )

[node name="Mandato_ayuda" type="RichTextLabel" parent="."]
visible = false
margin_left = 712.0
margin_top = 334.0
margin_right = 1024.0
margin_bottom = 470.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "1. Rellenar matraz herlenmeyer con mezcla disolvente de alcohol y éter
3. Añadir fenolftaleina a la mezcla disolvente
4. Rellenar bureta de KOH 0,1N
5. Mezclarlo
6. Rellenar matraz herlenmeyer con aceite
5.  Mezclarlo
6. Añadir nuevamente KOH 0,1N a la mezcla"
deselect_on_focus_loss_enabled = false

[node name="Link" type="LinkButton" parent="."]
visible = false
margin_left = 712.0
margin_top = 346.0
margin_right = 809.0
margin_bottom = 370.0
text = "Video de ayuda"

[connection signal="pressed" from="Ayuda" to="." method="_on_Ayuda_pressed"]
[connection signal="pressed" from="Menu/BotonReiniciar" to="." method="_on_BotonReiniciar_pressed"]
[connection signal="pressed" from="Menu/BotonComprobar" to="." method="_on_Comprobar_pressed"]
[connection signal="pressed" from="Link" to="." method="_on_Link_pressed"]
